--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.0'
 
     defaultConfig {
         applicationId 'com.nilhcem.kidsroom'
-        minSdkVersion 26
-        targetSdkVersion 26
+        minSdkVersion 27
+        targetSdkVersion 27
         versionCode 1
         versionName '1.0'
     }
@@ -21,8 +22,7 @@ android {
     }
 }
 
-ext.arch_version = '1.0.0-beta2'
-ext.support_version = '26.1.0'
+ext.support_version = '27.0.0'
 
 dependencies {
     compileOnly 'com.google.android.things:androidthings:0.5.1-devpreview'
@@ -31,7 +31,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_version"
 
     implementation "android.arch.lifecycle:extensions:$arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+    kapt "android.arch.lifecycle:compiler:$arch_version"
 
     implementation 'com.google.android.things.contrib:driver-button:0.4'
 }
